app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
